feat: make `user` crud
